--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.min.js"></script>
   <!-- PageFlip library from jsDelivr CDN -->
-  <script src="https://cdn.jsdelivr.net/npm/stpageflip@2.0.0/dist/stpageflip.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/page-flip@2.0.0/dist/page-flip.min.js"></script>
   <script>
     // Ensure PageFlip is loaded before initializing flipbook
     window.onload = function() {
