--- a/index.html
+++ b/index.html
@@ -5,91 +5,7 @@
   <title>Product Catalog Flipbook</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.min.js"></script>
-  <!-- PageFlip library from jsDelivr CDN -->
   <script src="https://cdn.jsdelivr.net/npm/page-flip@2.0.7/dist/js/page-flip.browser.min.js"></script>
-  <script>
-    // Ensure PageFlip is loaded before initializing flipbook
-    window.onload = function() {
-      const url = 'https://cdn.shopify.com/s/files/1/0700/4844/8811/files/Product_Catalog_4.pdf';
-
-      pdfjsLib.GlobalWorkerOptions.workerSrc = 'https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.worker.min.js';
-
-      let pageFlip;
-
-      pdfjsLib.getDocument(url).promise.then(async function(pdf) {
-        const pages = [];
-
-        for (let i = 1; i <= pdf.numPages; i++) {
-          const page = await pdf.getPage(i);
-          const viewport = page.getViewport({ scale: 4 });
-          const canvas = document.createElement('canvas');
-          const context = canvas.getContext('2d');
-
-          canvas.width = viewport.width;
-          canvas.height = viewport.height;
-
-          await page.render({ canvasContext: context, viewport: viewport }).promise;
-
-          const img = new Image();
-          img.src = canvas.toDataURL();
-          pages.push(img);
-        }
-
-        if (typeof St !== 'undefined' && St.PageFlip) {
-          pageFlip = new St.PageFlip(
-            document.getElementById('flipbook'),
-            {
-              width: 800,
-              height: 1000,
-              size: 'stretch',
-              minWidth: 315,
-              minHeight: 400,
-              maxWidth: 2000,
-              maxHeight: 3000,
-              showCover: true,
-              flippingTime: 700,
-              mobileScrollSupport: true,
-              useMouseEvents: true,
-              autoSize: true,
-              clickEventForward: true,
-              usePortrait: true,
-            }
-          );
-
-          pageFlip.loadFromImages(pages.map(page => page.src));
-
-          // Setup slider
-          const pageSlider = document.getElementById('pageSlider');
-          pageSlider.max = pages.length;
-
-          pageSlider.addEventListener('input', (e) => {
-            pageFlip.flip(parseInt(e.target.value) - 1);
-          });
-
-          pageFlip.on('flip', (e) => {
-            pageSlider.value = e.data + 1;
-          });
-        } else {
-          console.error('PageFlip library not loaded properly.');
-        }
-      }).catch(function(error) {
-        console.error('Error loading PDF:', error);
-      });
-
-      // Fullscreen button
-      const fullscreenBtn = document.getElementById('fullscreenBtn');
-      fullscreenBtn.addEventListener('click', () => {
-        const elem = document.documentElement;
-        if (!document.fullscreenElement) {
-          elem.requestFullscreen().catch(err => {
-            alert(`Error attempting to enable fullscreen mode: ${err.message}`);
-          });
-        } else {
-          document.exitFullscreen();
-        }
-      });
-    }
-  </script>
   <style>
     body, html {
       margin: 0;
@@ -140,5 +56,62 @@
 </div>
 <div id="flipbook"></div>
 
-</body>
-</html>
+<script>
+window.onload = function() {
+  const url = 'https://cdn.shopify.com/s/files/1/0700/4844/8811/files/Product_Catalog_4.pdf';
+
+  pdfjsLib.GlobalWorkerOptions.workerSrc = 'https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.worker.min.js';
+
+  let pageFlip;
+
+  pdfjsLib.getDocument(url).promise.then(async function(pdf) {
+    const pages = [];
+    const scale = 2;  // Increase this value for higher resolution (2 or 3)
+
+    for (let i = 1; i <= pdf.numPages; i++) {
+      const page = await pdf.getPage(i);
+      const viewport = page.getViewport({ scale: scale });
+      const canvas = document.createElement('canvas');
+      const context = canvas.getContext('2d');
+
+      canvas.width = viewport.width;
+      canvas.height = viewport.height;
+
+      await page.render({ canvasContext: context, viewport: viewport }).promise;
+
+      const img = new Image();
+      img.src = canvas.toDataURL();
+      pages.push(img);
+    }
+
+    pageFlip = new PageFlip(
+      document.getElementById('flipbook'),
+      {
+        width: 800,
+        height: 1000,
+        size: 'stretch',
+        minWidth: 315,
+        minHeight: 400,
+        maxWidth: 2000,
+        maxHeight: 3000,
+        showCover: true,
+        flippingTime: 700,
+        mobileScrollSupport: true,
+        useMouseEvents: true,
+        autoSize: true,
+        clickEventForward: true,
+        usePortrait: true,
+      }
+    );
+
+    pageFlip.loadFromImages(pages.map(page => page.src));
+
+    // Setup slider
+    const pageSlider = document.getElementById('pageSlider');
+    pageSlider.max = pages.length;
+
+    pageSlider.addEventListener('input', (e) => {
+      pageFlip.flip(parseInt(e.target.value) - 1);
+    });
+
+    pageFlip.on('
